--- a/src/less/post.less
+++ b/src/less/post.less
@@ -574,8 +574,8 @@
 			max-width: 88%;
 			font-style: italic;
 
-			p{
-				margin-botom: 0;
+			& > p {
+				margin: 0 !important;
 			}
 
 			* {
