--- a/src/less/code.less
+++ b/src/less/code.less
@@ -6,11 +6,16 @@ blockquote pre {
    margin:auto;
 }
 
+blockquote p {
+  margin-bottom: 0 !important;
+}
+
 blockquote .language-python {
 
   &::before {
     background: #1d2a38 !important;
     }
+
   background: rgba(41, 61, 76, 0.84) !important;
 }
 
