--- a/src/less/code.less
+++ b/src/less/code.less
@@ -14,6 +14,7 @@ blockquote .language-python {
 
   &::before {
     background: #1d2a38 !important;
+    font-size: 14px !important;
     }
 
   background: rgba(41, 61, 76, 0.84) !important;
