--- a/src/less/post.less
+++ b/src/less/post.less
@@ -157,7 +157,7 @@
 
 	p {
 		text-align: left;
-		font-size: 1em;
+		font-size: 1.05em;
 		line-height: 1.7;
 		@media(max-width: 600px) {
 			font-size: 1em;
@@ -561,8 +561,8 @@
 		}
 
 		blockquote {
-			border-left: 4px solid #9ec4d0;
-			background: #e9f3f7;
+			border-left: 4px solid #cedde2;
+			background: #ebf0f5;
 			color: #32687b;
 			padding: 20px;
 			font-family: 'CompassSans-Regular',sans-serif;
@@ -574,7 +574,11 @@
 			max-width: 88%;
 			font-style: italic;
 
-			& > p {
+			& > p:last-child {
+				margin: 0 0 20px;
+			}
+
+			& > p:last-child {
 				margin: 0 !important;
 			}
 
