--- a/src/less/post.less
+++ b/src/less/post.less
@@ -561,8 +561,8 @@
 		}
 
 		blockquote {
-			border-left: 4px solid #cedde2;
-			background: #ebf0f5;
+			border-left: 4px solid #9ec4d0;
+			background: #e9f3f7;
 			color: #32687b;
 			padding: 20px;
 			font-family: 'CompassSans-Regular',sans-serif;
@@ -574,7 +574,7 @@
 			max-width: 88%;
 			font-style: italic;
 
-			& > p:last-child {
+			& > p {
 				margin: 0 0 20px;
 			}
 
