--- a/src/less/post.less
+++ b/src/less/post.less
@@ -561,7 +561,7 @@
 		}
 
 		blockquote {
-			border-left: 4px solid #9ec4d0;
+			border-left: 4px solid #C9DEE2;
 			background: #e9f3f7;
 			color: #32687b;
 			padding: 20px;
@@ -570,12 +570,12 @@
 			font-size: 1em;
 			line-height: 1.6;
 			overflow: hidden;
-			margin: 20px auto;
+			margin: 30px auto;
 			max-width: 88%;
 			font-style: italic;
 
 			& > p {
-				margin: 0 0 20px;
+				margin: 0 0 20px !important;
 			}
 
 			& > p:last-child {
@@ -916,7 +916,7 @@
 		background: @white;
 		padding: 40px 60px;
 		margin: 0 0 20px;
-		min-height: 88px;
+		min-height: 85px;
 		box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
 		display: flex;
 		justify-content: space-between;
