--- a/src/less/code.less
+++ b/src/less/code.less
@@ -2,7 +2,7 @@
 @import 'nord.less';
 
 blockquote pre {
-   width: 94%;
+   width: 92% !important;
    margin:auto;
 }
 
@@ -13,7 +13,7 @@ blockquote p {
 blockquote .language-python {
 
   &::before {
-    background: #1d2a38 !important;
+    background: rgba(29, 37, 56, 0.42) !important;
     font-size: 14px !important;
     }
 
@@ -73,7 +73,7 @@ blockquote .language-python {
   code {
     margin: 0;
     height: 100%;
-    font-size: 14px;
+    font-size: .9em;
     /*font-family: 'DroidSansMonoSlashed', "anonymous-pro", monospace, serif;*/
     @media(max-width: 600px) {
       font-size: 12px;
