--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -34,6 +34,7 @@
 @import 'searchbar.less';
 @import 'fontawesome.less';
 @import 'repos.less';
+@import 'redis.less';
 
 /*====================================================
 	about author and comment and next-prev link
