--- a/src/less/table.less
+++ b/src/less/table.less
@@ -143,7 +143,8 @@ td, th{
 
       tr {
         display: block;
-        padding: 0 10px 0 0;
+        border-spacing: 0;
+        padding: 0;
         height: 100%;
 
         th::before {
