--- a/src/less/post.less
+++ b/src/less/post.less
@@ -23,9 +23,11 @@
 
 		article {
 			margin: 0 auto 0;
+			width: 900px;
 			box-shadow: @shadow-color;
 			@media(max-width: 800px) {
 				margin: 0;
+				width: auto;
 			}
 		}
 	}
