--- a/src/less/redis.less
+++ b/src/less/redis.less
@@ -18,11 +18,13 @@
   padding: 20px;
   margin-bottom: 30px;
   position: relative;
+  max-width: -webkit-fill-available;
+  width: -webkit-fill-available;
 
   h2 {
     line-height: 1.3;
     text-align: center;
-    margin: 1em 0;
+    margin: 0 auto 1em;
     width: auto;
     color: #424446;
     font-family: CompassSans-Regular;
@@ -30,7 +32,7 @@
     font-size: 1.8em;
     font-weight: 400!important;
     line-height: 1.3;
-    @media(max-width: 600px) {
+    @media(max-width: 800px) {
       margin-top: 0;
     }
   }
@@ -39,7 +41,7 @@
     display: flex;
     justify-content: space-around;
     align-content: center;
-    @media(max-width: 600px) {
+    @media(max-width: 800px) {
       display: none;
     }
   }
@@ -71,16 +73,24 @@ nav {
 }
 
 .center.parent {
-  width: 200px;
-  max-width: 200px;
-  min-width: 200px;
-  max-width: 200px !important;
+  width: 180px;
+  max-width: 180px;
+  min-width: 180px;
+  max-width: 180px !important;
   overflow: hidden;
+}
+
+.strengths .columns .columns {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .strengths .columns .columns:last-child {
   margin-bottom: 0;
 }
+
+
 
 .center.parent {
   border: 3px solid #f5f5f5;
@@ -137,7 +147,7 @@ nav {
   display: block;
   text-align: center;
   border: 0;
-  @media(max-width: 600px) {
+  @media(max-width: 800px) {
     display: none;
   }
 }
@@ -165,7 +175,7 @@ nav {
 
 .medium-4 {
   max-width: 300px;
-  @media(max-width: 600px) {
+  @media(max-width: 800px) {
     min-width: 100%;
   }
 }
@@ -236,9 +246,9 @@ nav {
 }
 
 .strengths .columns .columns {
-  height: 86px;
-  max-height: 86px;
-  min-height: 86px;
+  height: 56px;
+  max-height: 56px;
+  min-height: 70px;
   background-color: white;
   -webkit-border-radius: 2px;
   border-radius: 2px;
@@ -252,13 +262,13 @@ nav {
   -ms-transition: all 350ms ease-in-out;
   -o-transition: all 350ms ease-in-out;
   transition: all 350ms ease-in-out;
-  @media(max-width: 600px) {
+  @media(max-width: 800px) {
     display: none;
   }
 }
 
 .strengths .columns .img {
-  height: 86px;
+  height: 56px;
   width: 45px;
   float: left;
   background-position: center center;
@@ -367,29 +377,38 @@ nav {
 }
 
 .strengths .columns .red-strengths img {
-  width: 200px;
+  width: 180px;
   height: auto;
-  margin-top: 78px;
+  margin-top: 40px;
   border: 0 !important;
   @media(max-width: 800px) {
     border: 0 !important;
   }
 }
 
+.strengths .columns .columns {
+
+}
+
+.feature {
+  display: flex !important;
+  align-items: center !important;
+}
+
 .strengths .columns .text {
   font-size: 90%;
-  padding-top: 32px;
-  margin-left: 60px;
+  margin-left: 20px;
+  padding-top: 0;
+  line-height: 1.3;
+  height: fit-content !important;
+  margin: 0 !important;
+  text-align: right !important;
 }
 
 .strengths .columns.left .text {
   text-align: right;
   margin-right: 60px;
   margin-left: 0;
-}
-
-.strengths .columns.vert .text {
-  padding-top: 21px;
 }
 
 .strengths .columns.large-6 {
@@ -444,6 +463,14 @@ nav {
   transition: all 500ms ease-in-out;
 }
 /** Mobile Differntiator **/
+
+.redis-mobile img {
+  position: relative;
+  top: 0;
+  left: 0;
+  max-width: 100%;
+  border: 0 !important;
+}
 .mobile-grid {
   display: none;
   background-image: url("https://hackers.nyc3.cdn.digitaloceanspaces.com/redis/bg-grey-circle.svg");
@@ -451,7 +478,7 @@ nav {
   background-position: center 70px;
   background-repeat: no-repeat;
   padding-bottom: 0;
-  @media(max-width: 600px) {
+  @media(max-width: 800px) {
     display: block;
   }
 }
@@ -486,6 +513,7 @@ nav {
   top: 0;
   left: -20px;
   padding: 8px;
+  border: 0 !important;
 }
 
 .mobile-grid .columns .columns .text {
@@ -504,7 +532,7 @@ nav {
 }
 
 .mobile-grid .red-strengths img {
-  max-width: 84%;
+  max-width: 100%;
   position: relative;
   top: 51px;
   left: 18px;
@@ -582,7 +610,7 @@ nav {
 
   .mobile-flex {
     flex-direction: row;
-    @media(max-width: 600px) {
+    @media(max-width: 800px) {
       flex-direction: column !important;
     }
   }
