--- a/src/less/post.less
+++ b/src/less/post.less
@@ -23,7 +23,7 @@
 
 		article {
 			margin: 0 auto 0;
-			width: 900px;
+			width: 100%;
 			box-shadow: @shadow-color;
 			@media(max-width: 800px) {
 				margin: 0;
