--- a/src/less/redis.less
+++ b/src/less/redis.less
@@ -3,8 +3,12 @@
   padding-bottom: 30px;
   margin: auto;
   background-color: #F5F5F5;
-  max-width: 900px;
+
 margin: auto;
+}
+
+.strengths {
+  max-width: 900px;
 }
 /******************************************/
 /******** Front Page Differentiators ******/
