--- a/src/less/redis.less
+++ b/src/less/redis.less
@@ -9,6 +9,7 @@ margin: auto;
 
 .strengths {
   max-width: 900px;
+  margin: auto;
 }
 /******************************************/
 /******** Front Page Differentiators ******/
