--- a/src/less/redis.less
+++ b/src/less/redis.less
@@ -611,12 +611,17 @@ nav {
         text-align: center;
     }
 }*/
+
+.mobile-flex {
+  padding-top: 30px;
+}
 .strengths {
   height: fit-content !important;
   min-height: none;
 
   .mobile-flex {
     flex-direction: row;
+    padding-top: 30px;
     @media(max-width: 800px) {
       flex-direction: column !important;
     }
