--- a/src/less/article-preview.less
+++ b/src/less/article-preview.less
@@ -17,6 +17,10 @@
     border-bottom: 2px solid #dcdcdc!important;
     display: flex;
 
+    h5 {
+      font-weight: 500;
+    }
+
     a {
       display: flex;
       justify-content: space-between;
