--- a/src/less/code.less
+++ b/src/less/code.less
@@ -68,6 +68,7 @@ blockquote .language-python {
     border-radius: 2px;
     color: #0e9bb5;
     font-weight: 500;
+    font-size: 1em;
   }
 
   code {
