--- a/src/less/mixin.less
+++ b/src/less/mixin.less
@@ -36,3 +36,5 @@
 	@value-percentage: @value * 100;
 	filter: ~"alpha(opacity=(@{value-percentage}))";
 }
+
+.at2x(@path, [optional] @width: auto, [optional] @height: auto);
