--- a/post.hbs
+++ b/post.hbs
@@ -13,7 +13,7 @@
 						<h4 class="excerpt">{{excerpt}}</h4>
 						{{#if feature_image}}
 							<div class="featured-media">
-								<img src="{{img_url feature_image}}" alt="{{{title}}}">
+								<img src="{{img_url feature_image}}" alt="{{{title}}}" data-rjs="3">
 							</div>
 						{{/if}}
 
@@ -36,8 +36,8 @@
 										<a href="{{url}}" class="meta-item author mobile"><i class="fas fa-user" style="width:13px; display:inline-block; margin-right:10px;"></i><span>{{slug}}</span></a>
 									{{/unless}}
 									{{#if profile_image}}
-										<a href="{{url}}" class="meta-item author desktop"><img src="{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="Author image" class="avi"><span>{{name}}</span></a>
-										<a href="{{url}}" class="meta-item author mobile"><img src="{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="Author image" class="avi"><span>{{slug}}</span></a>
+										<a href="{{url}}" class="meta-item author desktop"><img src="{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="Author image" class="avi" data-rjs="3"><span>{{name}}</span></a>
+										<a href="{{url}}" class="meta-item author mobile"><img src="{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="Author image" class="avi" data-rjs="3"><span>{{slug}}</span></a>
 									{{/if}}
 								{{/primary_author}}
 								<span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMM Do"}}</span></span>
