--- a/src/less/code.less
+++ b/src/less/code.less
@@ -69,6 +69,7 @@ blockquote .language-python {
     color: #0e9bb5;
     font-weight: 500;
     font-size: 1em;
+    font-family: dm;
   }
 
   code {
