--- a/src/less/author.less
+++ b/src/less/author.less
@@ -37,6 +37,15 @@
 		#medium {
 			background:white;
 
+			.title {
+				margin: 0 0 0 -9px;
+			}
+
+			.medium-widget-article__item {
+			    font-size: 14px;
+			    padding: 15px 5px;
+			}
+
 			.medium-widget-article__image img {
 				width: 80px;
 			}
