--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -309,10 +309,12 @@
         line-height: 1.5;
         color: #37363F;
         text-algin: right;
-        line-height: 1.5;
+        line-height: 1;
         margin-top: 10px;
         position: absolute;
         bottom: 13px;
+        font-size: 1em;
+        font-family: 'CompassSans-Regular';
       }
     }
   }
