--- a/src/less/postlist.less
+++ b/src/less/postlist.less
@@ -8,8 +8,12 @@
     flex-direction: row;
     flex-wrap: wrap;
 
-    article .content {
-      padding: 20px;
+    article {
+      margin-bottom: 20px;
+
+      .content {
+        padding: 20px;
+      }
     }
 
     .series-cover {
@@ -75,6 +79,7 @@
         font-size: 1em;
         font-family: 'CompassSans-Regular';
         min-height: 70px;
+        margin-bottom: 35px;
       }
 
       .post-permalink {
