--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -327,6 +327,7 @@
 				font-weight: 100;
 				border: 1px solid #d5dbe6;
 				transition: all 0.3s all;
+				margin-bottom: 10px;
 
 				&::placeholder {
 					opacity: 0.85;
