--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -255,4 +255,13 @@
       color: #5a8a8a !important;
     }
   }
+
+  .plotly {
+    background: #80dee6;
+    color: #155A8B;
+
+    * {
+      color: #155A8B !important;
+    }
+  }
 }
