--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -276,11 +276,11 @@
       width: auto;
       display: block;
       align-items: left;
-      min-height: 164px;
+      min-height: 134px;
 
       h2 {
         color: #37363e;
-        font-size: 1.1em;
+        font-size: 1.2em;
         line-height: 1.2;
         margin: 0;
         font-weight: 600;
@@ -291,7 +291,7 @@
         font-size: 0.9em;
         color: @text-color;
         margin: 5px 0;
-        line-height: 1.5;
+        line-height: 1.4;
         text-align: left;
         font-weight: 100;
         font-family: 'CompassSans-Regular';
@@ -305,16 +305,14 @@
       }
 
       .postcount {
-        font-size: 0.8em;
-        line-height: 1.5;
         color: #37363F;
-        text-algin: right;
+        text-align: right;
         line-height: 1;
-        margin-top: 10px;
         position: absolute;
-        bottom: 13px;
-        font-size: 1em;
-        font-family: 'CompassSans-Regular';
+        bottom: 20px;
+        right: 20px;
+        font-size: 0.9em;
+        font-family: 'CompassSans-Medium';
       }
     }
   }
