--- a/post.hbs
+++ b/post.hbs
@@ -69,11 +69,14 @@
 								</div>
 							</footer>
 						</div>
+						{{> about-author}}
+						   {{#author include="count.posts"}}{{> author-card}}
+						{{/author}}
+						<div class="commentbox"></div>
 					</article>
 
 					{{!--{{> comments}}--}}
-					{{> about-author}}
-					{{#author include="count.posts"}}{{> author-card}}{{/author}}
+
 					{{> prev-next}}
 				</div>
 				<!-- end main post area -->
@@ -84,6 +87,41 @@
 {{#has tag="Roundup"}}
 	<script src="{{asset "/js/includes/previews.js"}}"></script>
 {{/has}}
+<script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
+
+<script>
+commentBox('5704134103662592-proj', {
+    className: 'commentbox', // the class of divs to look for
+    defaultBoxId: 'commentbox', // the default ID to associate to the div
+    tlcParam: 'tlc', // used for identifying links to comments on your page
+    backgroundColor: null, // default transparent
+    textColor: null, // default black
+    subtextColor: null, // default grey
+    singleSignOn: null, // enables Single Sign-On (for Professional plans only)
+    /**
+     * Creates a unique URL to each box on your page.
+     *
+     * @param {string} boxId
+     * @param {Location} pageLocation - a copy of the current window.location
+     * @returns {string}
+     */
+    createBoxUrl(boxId, pageLocation) {
+
+        pageLocation.search = ''; // removes query string!
+        pageLocation.hash = boxId; // creates link to this specific Comment Box on your page
+        return pageLocation.href; // return url string
+    },
+    /**
+     * Fires once the plugin loads its comments.
+     * May fire multiple times in its lifetime.
+     *
+     * @param {number} count
+     */
+    onCommentCount(count) {
+
+    }
+});
+</script>
 {{> analytics}}
 {{/post}}
 <!-- end post -->
