--- a/post.hbs
+++ b/post.hbs
@@ -95,6 +95,7 @@ commentBox('5704134103662592-proj', {
     defaultBoxId: 'commentbox', // the default ID to associate to the div
     tlcParam: 'tlc', // used for identifying links to comments on your page
     backgroundColor: null, // default transparent
+		buttonColor: '#00a9e2'
     textColor: null, // default black
     subtextColor: null, // default grey
     singleSignOn: null, // enables Single Sign-On (for Professional plans only)
