--- a/src/less/comments.less
+++ b/src/less/comments.less
@@ -1,13 +1,10 @@
-#comment-box {
+.commentbox {
   background: white;
-  display:none;
+  display: none;
   margin-bottom: 25px;
 
-  
   .body {
     padding: 40px 60px 20px;
-
-
   }
 
   .avatar {
@@ -44,7 +41,6 @@
   }
 
   .write-comment {
-
     .comment-form-with-avatar {
       width: 95%;
       margin: auto;
@@ -137,9 +133,7 @@
         }
       }
 
-      button.btn.primary-button {
-
-      }
+      button.btn.primary-button {}
     }
   }
 
