--- a/src/less/comments.less
+++ b/src/less/comments.less
@@ -1,7 +1,9 @@
 .commentbox {
   background: white;
-  display: none;
+  display: block;
   margin-bottom: 25px;
+  padding: 0 60px;
+  height:calc(auto - 50px)
 
   .body {
     padding: 40px 60px 20px;
