--- a/src/less/comments.less
+++ b/src/less/comments.less
@@ -3,7 +3,7 @@
   display: block;
   margin-bottom: 25px;
   padding: 0 60px;
-  height:calc(auto - 50px)
+  height: calc(100% - 50px);
 
   .body {
     padding: 40px 60px 20px;
