--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -40,10 +40,10 @@
     <script async src="{{asset "/js/includes/previews.js"}}"></script>
   {{/has}}
   <script>
-  $( document ).ready(function() {
+  /*$( document ).ready(function() {
     var containerHeight = $("#commentbox").height();
     $("#commentbox").height(containerHeight - 80);
-  });
+  });*/
   </script>
 {{/is}}
 
