--- a/post.hbs
+++ b/post.hbs
@@ -121,7 +121,7 @@ commentBox('5704134103662592-proj', {
 
      */
 
-    onCommentCount(count) {
+    /*onCommentCount(count) {
 			window.addEventListener('message',function(event) {
 				if(event.origin == 'https://commentbox.io') return;
 				console.log('message received:  ' + event.data,event);
@@ -132,7 +132,7 @@ commentBox('5704134103662592-proj', {
 				console.log(heightString);
 	      $(".commentbox").css('height' - heightString + 'px');
 			},false);
-    }
+    }*/
 });
 
 
