--- a/post.hbs
+++ b/post.hbs
@@ -72,10 +72,10 @@
 						{{> about-author}}
 						   {{#author include="count.posts"}}{{> author-card}}
 						{{/author}}
-
-						<div class="commentholder"><div class="commentbox"></div></div>
 					</article>
-
+					<div class="commentholder">
+						<div class="commentbox"></div>
+					</div>
 					{{!--{{> comments}}--}}
 
 					{{> prev-next}}
@@ -117,7 +117,6 @@ commentBox('5704134103662592-proj', {
      * Fires once the plugin loads its comments.
      * May fire multiple times in its lifetime.
      *
-     * @param {number} count
 
      */
 
