--- a/post.hbs
+++ b/post.hbs
@@ -74,6 +74,7 @@
 						{{/author}}
 					</article>
 					<div class="commentholder">
+						<div class="comment-cover"></div>
 						<div class="commentbox"></div>
 					</div>
 					{{!--{{> comments}}--}}
