--- a/src/less/comments.less
+++ b/src/less/comments.less
@@ -4,18 +4,29 @@
   overflow: hidden;
 }
 
+.comment-cover {
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  bottom: 0;
+  background: #e9eef9;
+  display: block;
+  z-index: 32;
+  bottom: 37px;
+}
+
 .commentbox {
   display: block;
-  position: absolute;
+  position: relative;
   top: -50px;
-  width: -webkit-fill-available;
-  margin-bottom: 25px;
-  padding: 0 60px;
-  background: #fff;
-  width: 600px;
-  left: 0;
   right: 0;
+  left: 0;
+  width: -webkit-fill-available;
+  width: -webkit-fill-available;
   margin: auto;
+  margin-bottom: 25px;
+  padding: 0 0 0 120px;
+  background: #fff;
 
   .body {
     padding: 40px 60px 20px;
