--- a/src/less/comments.less
+++ b/src/less/comments.less
@@ -7,12 +7,12 @@
 .comment-cover {
   position: absolute;
   width: 100%;
-  height: 50px;
+  height: 53px;
   bottom: 0;
   background: #e9eef9;
   display: block;
-  z-index: 32;
-  bottom: 37px;
+  z-index: 1;
+  bottom: 49px;
 }
 
 .commentbox {
@@ -24,7 +24,7 @@
   width: -webkit-fill-available;
   width: -webkit-fill-available;
   margin: auto;
-  margin-bottom: 25px;
+  margin-bottom: 0;
   padding: 0 0 0 120px;
   background: #fff;
 
