--- a/src/less/comments.less
+++ b/src/less/comments.less
@@ -2,6 +2,10 @@
   position: relative;
   min-height: 200px;
   overflow: hidden;
+
+  @media(max-width: 600px) {
+    display: none;
+  }
 }
 
 .comment-cover {
@@ -27,6 +31,10 @@
   margin-bottom: 0;
   padding: 0 0 0 120px;
   background: #fff;
+
+  @media(max-width: 800px) {
+    padding: 0 0 0 30px;
+  }
 
   .body {
     padding: 40px 60px 20px;
