--- a/src/less/comments.less
+++ b/src/less/comments.less
@@ -2,6 +2,7 @@
   position: relative;
   min-height: 200px;
   overflow: hidden;
+  margin-bottom: -50px;
 
   @media(max-width: 600px) {
     display: none;
