--- a/src/less/post.less
+++ b/src/less/post.less
@@ -922,7 +922,7 @@
 	.about-author {
 		background: @white;
 		padding: 40px 60px;
-		margin: 0 0 20px;
+		margin: 1px 0;
 		min-height: 85px;
 		box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
 		display: flex;
