--- a/src/less/redis.less
+++ b/src/less/redis.less
@@ -34,6 +34,11 @@ margin: auto;
     margin: 30px auto !important;
   }
 
+  @media(max-width: 600px) {
+    max-width: none;
+    width: 100%;
+  }
+
   h2 {
     line-height: 1.3;
     text-align: center;
