--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -257,11 +257,11 @@
   }
 
   .plotly {
-    background: #80dee6;
-    color: #155A8B;
+    background: #acf5fb;
+    color: #155a8b;
 
     * {
-      color: #155A8B !important;
+      color: #155a8b !important;
     }
   }
 }
